# Reading_List

./: .gitignore  README.md  pyproject.toml  seed.py
app/: config.py  crud.py  db.py  enums.py  main.py
app/crud/: __init__.py  common.py  item.py  tag.py  user.py
app/models/: __init__.py  base.py  item.py  tag.py  user.py
app/routers/: auth.py  items.py  tags.py  users.py
app/schemas/: __init__.py  item.py  tag.py  user.py
