[project]
name = "python-reading-list"
version = "0.1.0"
description = "Mini-service via Python/FastAPI/ORM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
