[project]
name = "python-reading-list"
version = "0.1.0"
description = "Mini-service via Python/FastAPI/ORM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "varname>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "ty>=0.0.12",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
